chore: remove /api/v1/me
