# src/server/handlers/api/openapi.rs
@@ -8,8 +8,6 @@ use super::v1;
 #[openapi(
     paths(
         accounts::create::create_account,
-        v1::me::get::get_me,
-        v1::me::scopes::get_me_scopes,
         v1::notes::create::create_note,
         v1::notes::get::get_note,
         v1::notes::list::list_notes,
