# src/server/handlers/api/v1/mod.rs
@@ -1,12 +1,10 @@
 use crate::server::AppState;
 
 pub mod graphql;
-pub mod me;
 pub mod notes;
 
 pub fn router() -> axum::Router<AppState> {
     axum::Router::new()
-        .nest("/me", me::router())
         .nest("/notes", notes::router())
         .nest("/graphql", graphql::router())
 }
